deploy: 80a36fe1f2db6618d8d387e6b61215e52497f534

--- a/02-weather/features/69d4c1df-33e4-4245-a0b2-03bc23cb1640-First-test.html
+++ b/02-weather/features/69d4c1df-33e4-4245-a0b2-03bc23cb1640-First-test.html
@@ -1478,7 +1478,7 @@ input#darkCheck:checked ~ label>svg#moon {
                                 
 
                                 <div class="text">
-                                    <span class="keyword highlight">When </span>
+                                    <span class="keyword highlight">And </span>
 
                                     
                                         I click on button named "Get started"
